master-service/k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-service
spec:
  replicas: 5  # Higher number of replicas for production
  template:
    spec:
      containers:
      - name: master-service
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 2000m
            memory: 1Gi
